feat: start from node 0 & number of nodes/trip logic